--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activtity.MainActivity">
         </activity>
-        <activity android:name=".SignInActivity" />
-        <activity android:name=".ProfileSetUpActivity">
+        <activity android:name=".Activtity.SignInActivity" />
+        <activity android:name=".Activtity.ProfileSetUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
