--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,10 @@
         <activity android:name=".Activtity.SignInActivity" />
         <activity android:name=".Activtity.ProfileSetUpActivity" />
         <activity android:name=".Activtity.SelectUserTypeActivity" />
-        <activity android:name=".Activtity.NavigationActivity" />
-        <activity android:name=".Activtity.CreateJobPostAcitvity">
-        </activity>
+        <activity android:name=".Activtity.NavigationActivityForJobProvider" />
+        <activity android:name=".Activtity.CreateJobPostAcitvity"/>
+        <activity android:name=".Activtity.NavigationActivityForJobSeeker" />
+
     </application>
 
 </manifest>
