OREO-54 # first iteration of populating Listview with jobs pulled from database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Activtity.NavigationActivityForJobProvider" />
         <activity android:name=".Activtity.CreateJobPostAcitvity"/>
         <activity android:name=".Activtity.NavigationActivityForJobSeeker" />
+        <activity android:name=".Activtity.ViewJobsActivity" />
 
     </application>
 
