--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mcommonjobs.oreo.twilioconfirmationsms">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    package="com.oreo.mcommonjobs">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".Activtity.MainActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activtity.SignInActivity" />
+        <activity android:name=".Activtity.ProfileSetUpActivity" />
+        <activity android:name=".Activtity.SelectUserTypeActivity" />
+        <activity android:name=".Activtity.NavigationActivityForJobProvider" />
+        <activity android:name=".Activtity.CreateJobPostAcitvity" />
+        <activity android:name=".Activtity.NavigationActivityForJobSeeker" />
+        <activity android:name=".Activtity.ViewJobsActivity" />
+        <activity android:name=".Activtity.TwilioAuthenticationActivity"></activity>
     </application>
 
 </manifest>
