--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,18 @@
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Activtity.SignInActivity" />
         <activity android:name=".Activtity.ProfileSetUpActivity" />
         <activity android:name=".Activtity.SelectUserTypeActivity" />
-        <activity android:name=".Activtity.NavigationActivity" />
-        <activity android:name=".Activtity.CreateJobPostAcitvity">
-        </activity>
+        <activity android:name=".Activtity.NavigationActivityForJobProvider" />
+        <activity android:name=".Activtity.CreateJobPostAcitvity" />
+        <activity android:name=".Activtity.NavigationActivityForJobSeeker" />
+        <activity android:name=".Activtity.ViewJobsActivity" />
+        <activity android:name=".Activtity.TwilioAuthenticationActivity"></activity>
     </application>
 
 </manifest>
