OREO-58 #comment Added functionality for user to select job from job list, which will direct them to the job info & application page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".Activtity.CreateJobPostActivity"/>
         <activity android:name=".Activtity.NavigationActivityForJobSeeker" />
         <activity android:name=".Activtity.ViewJobsActivity" />
+        <activity android:name=".Activtity.JobInfoActivity" />
 
     </application>
 
