--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
         <activity android:name=".Activtity.NavigationActivityForJobSeeker" />
         <activity android:name=".Activtity.ViewJobsActivity" />
         <activity android:name=".Activtity.JobInfoActivity" />
-        <activity android:name=".Activtity.ViewApplicants" >
-        </activity>
+        <activity android:name=".Activtity.ViewApplicants" />
+        <activity android:name=".Activtity.AddProfileActivity" />
 
     </application>
 
