OREO-127 #comment Refactored the name of activitiy and method for viewing user's profiles, removed dead code, refactored other variable and method names, added javadoc.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".Activtity.JobInfoActivity" />
         <activity android:name=".Activtity.ViewApplicants" />
         <activity android:name=".Activtity.AddProfileActivity" />
-        <activity android:name=".Activtity.ViewYourProfilesActivity" />
+        <activity android:name=".Activtity.ViewProfilesActivity" />
 
     </application>
 
