added questionaire layout, altered flow from jobinfoactivty to take you there

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".Activtity.ViewApplicants" />
         <activity android:name=".Activtity.AddProfileActivity" />
         <activity android:name=".Activtity.ViewProfilesActivity" />
+        <activity android:name=".Activtity.ApplicationQuestionsActivity" />
+
 
     </application>
 
