added viewapplicationcredentials to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".Activtity.AddProfileActivity" />
         <activity android:name=".Activtity.ViewProfilesActivity" />
         <activity android:name=".Activtity.ApplicationQuestionsActivity" />
+        <activity android:name=".Activtity.ViewApplicantCredentials" />
 
 
     </application>
