--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".Activtity.ViewProfilesActivity" />
         <activity android:name=".Activtity.ApplicationQuestionsActivity" />
         <activity android:name=".Activtity.ViewApplicantCredentials" />
+        <activity android:name=".Activtity.ViewPendingApplicationsActivity" />
+        
 
 
 
