--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.oreo.mcommonjobs">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -34,6 +34,8 @@
         <activity android:name=".Activtity.ViewApplicantCredentials" />
         <activity android:name=".Activtity.ViewPendingApplicationsActivity" />
         <activity android:name=".Activtity.AccountActivity" />
+        <activity android:name=".Activtity.UploadImageActivity" />
+
         
 
 
